--- a/06_DOM/01_index.html
+++ b/06_DOM/01_index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 class = "heading">DOM learning by saurabh </h1>
+        <h1 id = "title" class = "heading">DOM learning by saurabh </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</p>
         
     </div>
