--- a/06_DOM/01_index.html
+++ b/06_DOM/01_index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     
     <title>DOM LEARNING</title>
+    <style>
+      .bg-black{
+        background-color: #212121;
+        color: #fff;
+      }  
+    </style>
 </head>
-<body>
-    <div class="bg-black">
+<body class="bg-black">
+    <div >
         <h1 id = "title" class = "heading">DOM learning by saurabh </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</p>
+        <p>Lorem ipsum dolor <span>hii check inner content</span> sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</p>
         
     </div>
 </body>
 </html>
+<!--
+Difference in inner text and inner content
+innerText me span ke andar ka nahi aayega
+inner content me andar ka bhi aayega
+
+-->
