--- a/06_DOM/01_index.html
+++ b/06_DOM/01_index.html
@@ -15,7 +15,10 @@
     <div >
         <h1 id = "title" class = "heading">DOM learning by saurabh </h1>
         <p>Lorem ipsum dolor <span>hii check inner content</span> sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</p>
-        
+        <h2>Lorem ipsum dolor <span>hii check inner content</span> sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</h2>
+        <h2>Lorem ipsum dolor <span>hii check inner content</span> sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</h2>
+        <h2>Lorem ipsum dolor <span>hii check inner content</span> sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</h2>
+        <h3>Lorem ipsum dolor <span>hii check inner content</span> sit amet consectetur adipisicing elit. Iste cum explicabo blanditiis sit illum nostrum magni? Fugit aut est nesciunt odio vel blanditiis corporis impedit dicta sunt obcaecati! Ad, doloribus.</h3>
     </div>
 </body>
 </html>
